[gd_scene load_steps=8 format=3 uid="uid://cfarrv2hd77h8"]

[ext_resource type="Script" uid="uid://ch8hcpeaqvtti" path="res://Scripts/door.gd" id="1_p0e35"]
[ext_resource type="Texture2D" uid="uid://437akk6xk88u" path="res://Assets/Tilesets/MagicCliffsGodot/doors.png" id="1_w6aom"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p0e35"]
atlas = ExtResource("1_w6aom")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fahql"]
atlas = ExtResource("1_w6aom")
region = Rect2(64, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ab4ky"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0e35")
}],
"loop": false,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fahql")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w6aom"]
size = Vector2(16, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fahql"]
size = Vector2(0, 0)

[node name="Door" type="AnimatableBody2D"]
script = ExtResource("1_p0e35")

[node name="AnimatableSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ab4ky")
animation = &"close"
autoplay = "close"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_w6aom")

[node name="Filler" type="CollisionShape2D" parent="."]
position = Vector2(-7, 16)
shape = SubResource("RectangleShape2D_fahql")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
